[tool.poetry]
name = "proxygpt"
version = "0.0.1"
description = ""
authors = ["Cience"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
redis = "^4.6.0"
fastapi = "^0.100.1"
pyngrok = "^6.0.0"
python-dotenv = "^1.0.0"
uvicorn = "0.21.1"
gunicorn = "21.2.0"
python-dateutil = "2.8.2"
pytz = "2023.3"
pandas = "1.5.3"
sqlalchemy = "^2.0.21"
psycopg2-binary = "^2.9.9"
aioredis = "2.0.1"
openai = "^1.3.1"
httpx = "^0.25.1"
speedscope = "^1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"